@@ -151,6 +151,8 @@ typedef struct {
   xine_t              *xine;
 } xv_class_t;
 
+static const char *const prefer_types[] = VIDEO_DEVICE_XV_PREFER_TYPES;
+
 static uint32_t xv_get_capabilities (vo_driver_t *this_gen) {
   xv_driver_t *this = (xv_driver_t *) this_gen;
 
@@ -1145,10 +1147,15 @@ xv_find_adaptor_by_port (int port, xcb_xv_adaptor_info_iterator_t *adaptor_it)
 
 static xcb_xv_port_t xv_autodetect_port(xv_driver_t *this,
                                         xcb_xv_adaptor_info_iterator_t *adaptor_it,
-                                        xcb_xv_port_t base)
+                                        xcb_xv_port_t base,
+					xv_prefertype prefer_type)
 {
+  xcb_xv_adaptor_info_iterator_t *start = adaptor_it;
+
   for (; adaptor_it->rem; xcb_xv_adaptor_info_next(adaptor_it))
-    if (adaptor_it->data->type & XCB_XV_TYPE_IMAGE_MASK)
+    if (adaptor_it->data->type & XCB_XV_TYPE_IMAGE_MASK &&
+        (prefer_type == xv_prefer_none ||
+         strcasestr (xcb_xv_adaptor_info_name (adaptor_it->data), prefer_types[prefer_type])))
     {
       int j;
       for (j = 0; j < adaptor_it->data->num_ports; ++j)
@@ -1168,6 +1175,7 @@ static vo_driver_t *open_plugin(video_driver_class_t *class_gen, const void *vis
   int                   i;
   xcb_visual_t         *visual = (xcb_visual_t *) visual_gen;
   xcb_xv_port_t         xv_port;
+  xv_prefertype		prefer_type;
 
   const xcb_query_extension_reply_t *query_extension_reply;
 
@@ -1219,19 +1227,24 @@ static vo_driver_t *open_plugin(video_driver_class_t *class_gen, const void *vis
   adaptor_it = xcb_xv_query_adaptors_info_iterator(query_adaptors_reply);
   xv_port = config->register_num (config, "video.device.xv_port", 0,
 				  VIDEO_DEVICE_XV_PORT_HELP,
-				  10, NULL, NULL);
+				  20, NULL, NULL);
+  prefer_type = config->register_enum (config, "video.device.xv_preferred_method", 0,
+				       prefer_types, VIDEO_DEVICE_XV_PREFER_TYPE_HELP,
+				       10, NULL, NULL);
 
   if (xv_port != 0) {
     if (! xv_open_port(this, xv_port)) {
       xprintf(class->xine, XINE_VERBOSITY_NONE,
 	      _("%s: could not open Xv port %d - autodetecting\n"),
 	      LOG_MODULE, xv_port);
-      xv_port = xv_autodetect_port (this, &adaptor_it, xv_port);
+      xv_port = xv_autodetect_port (this, &adaptor_it, xv_port, prefer_type);
     } else
       xv_find_adaptor_by_port (xv_port, &adaptor_it);
   }
   if (!xv_port)
-    xv_port = xv_autodetect_port (this, &adaptor_it, 0);
+    xv_port = xv_autodetect_port (this, &adaptor_it, 0, prefer_type);
+  if (!xv_port)
+    xv_port = xv_autodetect_port (this, &adaptor_it, 0, xv_prefer_none);
 
   if (!xv_port) {
     xprintf(class->xine, XINE_VERBOSITY_LOG,
